[gd_scene load_steps=12 format=3 uid="uid://ck8kkgrpyt41x"]

[ext_resource type="Script" path="res://scenes/ui/loginScreen.gd" id="1_qfhd2"]

[sub_resource type="Gradient" id="Gradient_aikgy"]
colors = PackedColorArray(0.147792, 0.103559, 0.0139381, 1, 0.503388, 0.415713, 0.0947322, 1)

[sub_resource type="FastNoiseLite" id="FastNoiseLite_s3xix"]
frequency = 0.004

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_7y1vg"]
color_ramp = SubResource("Gradient_aikgy")
noise = SubResource("FastNoiseLite_s3xix")

[sub_resource type="LabelSettings" id="LabelSettings_q3jt3"]
font_size = 40

[sub_resource type="Gradient" id="Gradient_mybx6"]
offsets = PackedFloat32Array(0.034965, 0.496504, 0.986014)
colors = PackedColorArray(0, 0, 0, 0.784314, 0.196078, 0.196078, 0.196078, 0.784314, 0, 0, 0, 0.784314)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_o2hbk"]
gradient = SubResource("Gradient_mybx6")

[sub_resource type="Gradient" id="Gradient_q41w4"]
offsets = PackedFloat32Array(0, 0.531469, 1)
colors = PackedColorArray(0.196078, 0.196078, 0.196078, 0.784314, 0, 0, 0, 0.784314, 0.196078, 0.196078, 0.196078, 0.784314)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_3kx3e"]
gradient = SubResource("Gradient_q41w4")

[sub_resource type="Gradient" id="Gradient_s83of"]
colors = PackedColorArray(0, 0, 0, 0.784314, 0, 0, 0, 0.784314)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_5aopw"]
gradient = SubResource("Gradient_s83of")

[node name="loginScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qfhd2")

[node name="base" type="NinePatchRect" parent="."]
custom_minimum_size = Vector2(400, 600)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -300.0
offset_right = 200.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("NoiseTexture2D_7y1vg")

[node name="loginBox" type="VBoxContainer" parent="base"]
custom_minimum_size = Vector2(35, 50)
layout_mode = 2
offset_left = 35.0
offset_top = 60.0
offset_right = 365.0
offset_bottom = 560.0

[node name="title" type="Label" parent="base/loginBox"]
layout_mode = 2
text = "Login"
label_settings = SubResource("LabelSettings_q3jt3")
horizontal_alignment = 1
vertical_alignment = 1

[node name="titleMargin" type="MarginContainer" parent="base/loginBox"]
custom_minimum_size = Vector2(0, 70)
layout_mode = 2

[node name="mailLabel" type="Label" parent="base/loginBox"]
layout_mode = 2
text = "Email Address"

[node name="mailEdit" type="TextEdit" parent="base/loginBox"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
placeholder_text = "email address"

[node name="pwdLabel" type="Label" parent="base/loginBox"]
layout_mode = 2
text = "Password"

[node name="pwdEdit" type="TextEdit" parent="base/loginBox"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
placeholder_text = "password"

[node name="buttonMargin" type="MarginContainer" parent="base/loginBox"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="loginButton" type="TextureButton" parent="base/loginBox"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
texture_normal = SubResource("GradientTexture1D_o2hbk")
texture_pressed = SubResource("GradientTexture1D_3kx3e")
texture_disabled = SubResource("GradientTexture1D_5aopw")
stretch_mode = 0
flip_h = true

[node name="Label" type="Label" parent="base/loginBox/loginButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -21.0
offset_top = -13.0
offset_right = 21.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
text = "Login
"

[node name="createButton" type="TextureButton" parent="base/loginBox"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
texture_normal = SubResource("GradientTexture1D_o2hbk")
texture_pressed = SubResource("GradientTexture1D_3kx3e")
texture_disabled = SubResource("GradientTexture1D_5aopw")
stretch_mode = 0
flip_h = true

[node name="Label" type="Label" parent="base/loginBox/createButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -21.0
offset_top = -13.0
offset_right = 21.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
text = "Create Account
"

[node name="settingsButton" type="TextureButton" parent="base/loginBox"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
texture_normal = SubResource("GradientTexture1D_o2hbk")
texture_pressed = SubResource("GradientTexture1D_3kx3e")
texture_disabled = SubResource("GradientTexture1D_5aopw")
stretch_mode = 0
flip_h = true

[node name="Label" type="Label" parent="base/loginBox/settingsButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -21.0
offset_top = -13.0
offset_right = 21.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
text = "Settings
"

[node name="closeButton" type="TextureButton" parent="base/loginBox"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
texture_normal = SubResource("GradientTexture1D_o2hbk")
texture_pressed = SubResource("GradientTexture1D_3kx3e")
texture_disabled = SubResource("GradientTexture1D_5aopw")
stretch_mode = 0
flip_h = true

[node name="Label" type="Label" parent="base/loginBox/closeButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -21.0
offset_top = -13.0
offset_right = 21.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
text = "Close"

[node name="createBox" type="VBoxContainer" parent="base"]
visible = false
custom_minimum_size = Vector2(35, 50)
layout_mode = 2
offset_left = 35.0
offset_top = 60.0
offset_right = 365.0
offset_bottom = 560.0

[node name="title" type="Label" parent="base/createBox"]
layout_mode = 2
text = "Create Account"
label_settings = SubResource("LabelSettings_q3jt3")
horizontal_alignment = 1
vertical_alignment = 1

[node name="titleMargin" type="MarginContainer" parent="base/createBox"]
custom_minimum_size = Vector2(0, 15)
layout_mode = 2

[node name="usrNameLabel" type="Label" parent="base/createBox"]
layout_mode = 2
text = "Username"

[node name="usrNameEdit" type="TextEdit" parent="base/createBox"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
placeholder_text = "username"

[node name="mailLabel" type="Label" parent="base/createBox"]
layout_mode = 2
text = "Email Address"

[node name="mailEdit" type="TextEdit" parent="base/createBox"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
placeholder_text = "emali address"

[node name="pwdLabel" type="Label" parent="base/createBox"]
layout_mode = 2
text = "Password"

[node name="pwdEdit" type="TextEdit" parent="base/createBox"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
placeholder_text = "password"

[node name="pwdRepeatELabel" type="Label" parent="base/createBox"]
layout_mode = 2
text = "Repeat Password"

[node name="pwdRepeatEdit" type="TextEdit" parent="base/createBox"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
placeholder_text = "password"

[node name="buttonMargin" type="MarginContainer" parent="base/createBox"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="confirmButton" type="TextureButton" parent="base/createBox"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
texture_normal = SubResource("GradientTexture1D_o2hbk")
texture_pressed = SubResource("GradientTexture1D_3kx3e")
texture_disabled = SubResource("GradientTexture1D_5aopw")
stretch_mode = 0
flip_h = true

[node name="Label" type="Label" parent="base/createBox/confirmButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -21.0
offset_top = -13.0
offset_right = 21.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
text = "Confirm
"

[node name="backButton" type="TextureButton" parent="base/createBox"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
texture_normal = SubResource("GradientTexture1D_o2hbk")
texture_pressed = SubResource("GradientTexture1D_3kx3e")
texture_disabled = SubResource("GradientTexture1D_5aopw")
stretch_mode = 0
flip_h = true

[node name="Label" type="Label" parent="base/createBox/backButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -21.0
offset_top = -13.0
offset_right = 21.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
text = "Back"

[connection signal="pressed" from="base/loginBox/loginButton" to="." method="_on_login_button_pressed"]
[connection signal="pressed" from="base/loginBox/createButton" to="." method="_on_create_button_pressed"]
[connection signal="pressed" from="base/loginBox/settingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="base/loginBox/closeButton" to="." method="_on_close_button_pressed"]
[connection signal="pressed" from="base/createBox/confirmButton" to="." method="_on_confirm_button_pressed"]
[connection signal="pressed" from="base/createBox/backButton" to="." method="_on_back_button_pressed"]
